<resources>
    <string name="app_name">EasyGarden</string>
    <string name="menu_exposition">Ensoleillement</string>
    <string name="menu_type">type</string>
    <string name="menuhome">home</string>
    <string name="menucontact">contact</string>
    <string name="main_text">Pour passionnés comme pour amateurs, pour les habitués comme les novices, pour ceux ne voulant pas perdre de temps sur le net à la recherche de la composition florale idéale pour le jardin, voici une application souple et efficace. Avec la collaboration de particuliers et de professionnels vous pourrez trouver dans cet outil les principales plantes rencontrées dans les jardins. Classées par type (vivace ou annuel) ou par type d\'ensoleillement vous pourrez rapidement trouver la plante qu\'il vous faut. En plus d\'un descriptif complet présent sur chacune des fiches détaillées, des conseils vous sont donnés afin de garantir le meilleur choix. Pour des raisons d\'amélioration constante n\'hésitez pas à me contacter via le formulaire de contact. Vous pouvez me soutenir une variété de plante absente afin que je puisse faire le nécessaire. Sur ce dernier point, je vous souhaite une excellente visite!</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings relatedserveurogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enregistrement">Enregistrement</string>
    <string name="menuDeconnect">menuDeconnect</string>
    <string name="profil">Profil</string>
    <string name="login">Login</string>
    <string name="type">Type</string>
    <string name="exposition">Exposition</string>
    <string name="favori">Favori</string>
</resources>
